# llama2.c

./: .gitignore  CMakeLists.txt  run.c  vcpkg.json  win.c  win.h
.github/workflows/: build.yml
